--- a/UserMicroservice/Dockerfile
+++ b/UserMicroservice/Dockerfile
@@ -1,4 +1,12 @@
-FROM ubuntu:latest
-LABEL authors="Jaba"
+# Stage 1: Build the application
+FROM maven:3.8.2-openjdk-17-slim AS build
+WORKDIR /workspace
+COPY pom.xml .
+COPY src ./src
+RUN mvn -B -f pom.xml clean package -DskipTests
 
-ENTRYPOINT ["top", "-b"]
+# Stage 2: Run the application
+FROM eclipse-temurin:17-jdk-alpine
+VOLUME /tmp
+COPY --from=build /workspace/target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
