--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -29,6 +29,21 @@ services:
       - POSTGRES_PASSWORD=RestoBebraFood
       - POSTGRES_DB=db_user
 
+  db_notification:
+    container_name: postgres_notification
+    image: postgres:latest
+    volumes:
+      - db_notification:/data/postgres
+    ports:
+      - "5435:5432"
+    networks:
+      - dbnet
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=RestoBebraFood
+      - POSTGRES_PASSWORD=RestoBebraFood
+      - POSTGRES_DB=db_notification
+
   db_redis:
     container_name: db_redis
     image: redis:latest
@@ -68,7 +83,7 @@ services:
       - .:/app
       - /app/target
     ports:
-      - "8080:8080"
+      - "8081:8080"
     networks:
       - dbnet
     depends_on:
@@ -81,9 +96,29 @@ services:
       - admin_phone=+77777777777
       - admin_password=ADMIN
 
+  notification-microservice:
+    container_name: notification-microservice
+    build:
+      context: ./NotificationMicroservice
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+      - /app/target
+    ports:
+      - "8082:8080"
+    networks:
+      - dbnet
+    depends_on:
+      - db_notification
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db_food:5435/db_notification
+      - SPRING_DATASOURCE_USERNAME=RestoBebraFood
+      - SPRING_DATASOURCE_PASSWORD=RestoBebraFood
+
 networks:
   dbnet:
 
 volumes:
   db_food:
   db_user:
+  db_notification:
