--- a/back/k8s/ingress.yaml
+++ b/back/k8s/ingress.yaml
@@ -1,15 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: user-microservice-ingress
+  name: microservices-ingress
 spec:
+  ingressClassName: nginx
   rules:
-      - http:
-          paths:
-            - pathType: Prefix
-              path: "/user"
-              backend:
-                service:
-                  name: user-microservice-service
-                  port:
-                    number: 80
+    - host: localhost
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: user-microservice
+                port:
+                  number: 80
