--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/user-microservice:latest
+          tags: ghcr.io/${{ github.repository_owner }}/restorumba/user-microservice:latest
