--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -22,6 +22,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./back/UserMicroservice
           push: true
           tags: ghcr.io/jabaxnt/restorumba/user-microservice:latest
