--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
@@ -24,4 +27,4 @@ jobs:
         with:
           context: ./back/UserMicroservice
           push: true
-          tags: ghcr.io/JabaXNT/restorumba/user-microservice:latest
+          tags: ghcr.io/jabaxnt/restorumba/user-microservice:latest
