--- a/back/UserMicroservice/pom.xml
+++ b/back/UserMicroservice/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>kotlinx-coroutines-reactor</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
 
 
