--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -54,9 +54,7 @@ services:
 
   food-microservice:
     container_name: food-microservice
-    build:
-      context: ./FoodMicroservice
-      dockerfile: Dockerfile
+    image: "ghcr.io/jabaxnt/restorumba/food-microservice:latest"
     volumes:
       - .:/app
       - /app/target
@@ -76,9 +74,7 @@ services:
 
   user-microservice:
     container_name: user-microservice
-    build:
-      context: ./UserMicroservice
-      dockerfile: Dockerfile
+    image: "ghcr.io/jabaxnt/restorumba/user-microservice:latest"
     volumes:
       - .:/app
       - /app/target
@@ -89,7 +85,7 @@ services:
     depends_on:
       - db_user
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db_food:5434/db_user
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db_user:5432/db_user
       - SPRING_DATASOURCE_USERNAME=RestoBebraFood
       - SPRING_DATASOURCE_PASSWORD=RestoBebraFood
       - admin_username=ADMIN
@@ -98,9 +94,7 @@ services:
 
   notification-microservice:
     container_name: notification-microservice
-    build:
-      context: ./NotificationMicroservice
-      dockerfile: Dockerfile
+    image: "ghcr.io/jabaxnt/restorumba/notification-microservice:latest"
     volumes:
       - .:/app
       - /app/target
@@ -111,7 +105,7 @@ services:
     depends_on:
       - db_notification
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db_food:5435/db_notification
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db_notification:5432/db_notification
       - SPRING_DATASOURCE_USERNAME=RestoBebraFood
       - SPRING_DATASOURCE_PASSWORD=RestoBebraFood
 
