--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     depends_on:
       - db_user
     environment:
-      - SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS=kafka:9092
+      - SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS=kafka:9093
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db_user:5432/db_user
       - SPRING_DATASOURCE_USERNAME=RestoBebraFood
       - SPRING_DATASOURCE_PASSWORD=RestoBebraFood
@@ -109,7 +109,7 @@ services:
     depends_on:
       - db_notification
     environment:
-      - SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS=kafka:9092
+      - SPRING_KAFKA_PRODUCER_BOOTSTRAP-SERVERS=kafka:9093
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db_notification:5432/db_notification
       - SPRING_DATASOURCE_USERNAME=RestoBebraFood
       - SPRING_DATASOURCE_PASSWORD=RestoBebraFood
@@ -119,6 +119,8 @@ services:
     image: 'confluentinc/cp-zookeeper:latest'
     ports:
       - "2181:2181"
+    networks:
+      - dbnet
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
@@ -129,6 +131,8 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+    networks:
+      - dbnet
     environment:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
@@ -143,6 +147,8 @@ services:
       - kafka
     ports:
       - 8090:8080
+    networks:
+      - dbnet
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
