--- a/front/Restorumba/app/src/main/AndroidManifest.xml
+++ b/front/Restorumba/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Restorumba"
+        android:theme="@style/Base.Theme.Restorumba"
         tools:targetApi="31">
         <activity
             android:name=".EditProfileActivity"
